Fix work package title overflow
The work package title was being cut in the middle of words on the
full view, as well as overflowing out of the content box in the
activity messages. This commit fixes both to discourage breaking inside
words and to use hyphenation.

Closes https://community.openproject.org/work_packages/45022/activity

--- a/frontend/src/global_styles/content/work_packages/single_view/_single_view.sass
+++ b/frontend/src/global_styles/content/work_packages/single_view/_single_view.sass
@@ -40,7 +40,8 @@
 
     .inline-edit--display-field
       white-space: normal
-      word-break: break-all
+      overflow-wrap: break-word
+      hyphens: auto
 
 // Subject field
 .wp-new--subject-wrapper
